src/objects/AEM_Staging_Action__c.object
<CustomObject>
    <description>Staging Object to hold AEM transactions from the corporate Website. Processed by a batch to the Website Activity object</description>
    <fields>
        <fullName>AEMID__c</fullName>
        <externalId>true</externalId>
        <label>AEM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionDateTime__c</fullName>
        <description>Capture the data time that the action took place</description>
        <label>Action Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <label>Campaign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PageTitle__c</fullName>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Viewed__c</fullName>
        <label>Percent Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AEM Staging Action</label>
    <nameField>
        <displayFormat>AEM-STG-{0000000}</displayFormat>
        <label>AEM Staging Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AEM Staging Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>